Update package.json and copy files scripts

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "material-ui-build",
   "private": true,
-  "author": "Call-em-all Engineering Team",
-  "version": "0.16.7",
+  "author": "Call-em-all Engineering Team, customized by Airwallex",
+  "version": "0.16.8-1",
   "description": "React Components that Implement Google's Material Design.",
   "main": "./src/index.js",
   "keywords": [
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/callemall/material-ui.git"
+    "url": "https://github.com/airwallex/material-ui.git"
   },
   "license": "MIT",
   "bugs": {
