--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lint": "eslint src docs/src test --quiet && echo \"eslint: no lint errors\"",
     "lint:find-rules": "eslint-find-rules -u .eslintrc.js",
     "prebuild": "npm run clean:build",
+    "publish": "npm run build && cd build && npm publish --access=public && cd ..",
     "test": "cross-env NODE_ENV=test babel-node test/index.js",
     "test:coverage": "cross-env NODE_ENV=test babel-node ./node_modules/istanbul/lib/cli.js cover test/index.js",
     "test:karma": "karma start test/karma.conf.js --single-run",
